tests/data/parseerror/invalid-class-6.php
<?php

class TokenReflection_Test_ParseInvalidClass15
{
	use Trait1 {foo bar}

}
